# vapi-call-viewer

./: .gitignore  .pre-commit-config.yaml  CONVENTIONS.md  README.md  cache.py  calls.py  justfile  models.py  pyproject.toml  test_cache.py  test_calls.py  test_offline_mode.py
zz-chop-logs/: 2025-04-19_16-27-foreground-call-updates-in-cli.md
