[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calls_app"
version = "0.1.0"
description = "Calls application"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream",
    "rich",
    "pydantic",
    "loguru",
    "langchain",
    "httpx",
    "fastapi",
    "requests",
    "python-dateutil",
    "typer",
    "textual>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "pytest-xdist",
    "textual-dev",
    "ruff"
]

[project.scripts]
calls = "calls:app"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
    "textual-dev>=1.0.0",
    "ruff>=0.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["test_*.py"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -n auto"
timeout = 300  # 5 minutes timeout for tests
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]
